Issue #9804: ascii() now always represents unicode surrogate pairs as a single `\UXXXXXXXX`, regardless of whether the character is printable or not.  Also, the "backslashreplace" error handler now joins surrogate pairs into a single character on UCS-2 builds.